# skbar

./: .gitignore  CMakeLists.txt  README.md
libsrc/imgui/: CMakeLists.txt  imgui_impl_opengl3.cpp
libsrc/pfd/: example.vcxproj  portable-file-dialogs.h
libsrc/soil/: CMakeLists.txt
src/: adjacencyutils.cpp  adjacencyutils.h  application.h  baseeventprocessor.h  camera.h  commontypes.h  constants.h  drawer.h  drawereventprocessor.cpp  drawereventprocessor.h  editablemesh.cpp  editablemesh.h  eventprocessor.cpp  eventprocessor.h  example.h  framebuffer.cpp  framebuffer.h  glcamera.cpp  glcamera.h  gldrawer.cpp  gldrawer.h  glprojection.cpp  glprojection.h  halfedge.cpp  halfedge.h  intersectionutils.cpp  intersectionutils.h  laplacianreconstruction.h  main.cpp  meshrenderer.h  meshtypes.h  opmeshrenderer.cpp  opmeshrenderer.h  opquadmesh.cpp  opquadmesh.h  opsketch.cpp  opsketch.h  optrimesh.cpp  optrimesh.h  patchg.h  (+21 more)
src/patchgen/: ILP.hh  Pattern_2_0.hh  Pattern_2_1.hh  Pattern_3_1.hh  Pattern_3_2.hh  Pattern_3_3.hh  Pattern_4_1.hh  Pattern_4_2.hh  Pattern_4_3.hh  Pattern_4_4.hh  Pattern_5_1.hh  Pattern_5_2.hh  Pattern_5_3.hh  Pattern_5_4.hh  Pattern_6_0.hh  Pattern_6_1.hh  Pattern_6_2.hh  Pattern_6_3.hh
src/patterns-takayama/ktmethod/patchgen/: ILP.h  PatchParam.h  Pattern.h  Pattern_2_0.h  Pattern_2_1.h  Pattern_3_0.h  Pattern_3_1.h  Pattern_3_2.h  Pattern_3_3.h  Pattern_4_0.h  Pattern_4_1.h  Pattern_4_2.h  Pattern_4_3.h  Pattern_4_4.h  Pattern_5_0.h  Pattern_5_1.h  Pattern_5_2.h  Pattern_5_3.h  Pattern_5_4.h  Pattern_6_0.h  Pattern_6_1.h  Pattern_6_2.h  Pattern_6_3.h  Pattern_all.h  decl.h  extradefinition.cpp  generate_subtopology.cpp  generate_topology.cpp  generate_topology.h  get_boundary_geometry.cpp  get_default_parameter.cpp  get_param_str.cpp  ilpgurobi.h
src/utils/: debug.h  map.h  openmesh.h  triangleutils.h  vector.cpp  vector.h
